themes/KeepIt/assets/css/_common/_section/navbar.scss
  


  .header-logo a{
    padding: 0s ;

    i{
      line-height: 2em;
    }
  }
  
  
 .navbar .menu a {
    padding: 0 8px;
  }

  .navbar .menu .active{
      font-weight: 100;
      color: $light-background-color;

      .dark-theme &{
        color: $dark-background-color;
      }
  }
  
  .navbar-header a:hover, .navbar .menu a:hover {
    
    background-color: transparent;
  }

